--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,35 +1,40 @@
 .header {
     display: flex;
-    margin: 0 auto;
     width: calc(100% - 200px * 2);
-    margin-top: 45px;
+    margin: 45px auto 0;
     min-height: 74px;
     box-sizing: border-box;
-    border: 1px solid #545454;
+    border-bottom: 1px solid #545454;
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1050px) {
     .header {
         width: calc(100% - 150px * 2);
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 950px) {
     .header {
-        width: calc(100% - 120px * 2);
+        width: calc(100% - 100px * 2);
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 850px) {
     .header {
-        margin-top: 28px;
-        width: calc(100% - 90px * 2);
-        min-height: 56px;
+        width: calc(100% - 60px * 2);
     }
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 770px) {
+    .header {
+        width: calc(100% - 20px * 2);
+    }
+}
+
+@media screen and (max-width: 575px) {
     .header {
         width: 100%;
+        margin-top: 28px;
+        min-height: 56px;
     }
 }
