--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,4 @@
-.root {
+.page {
     font-family: 'Inter', arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -6,7 +6,4 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     text-rendering: optimizeLegibility;
-    align-self: center;
-    max-width: 1280px;
-    margin: 0 auto;
 }
