--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,9 +1,7 @@
 .profile__add-button {
-    align-self: center;
-    justify-self: flex-end;
     width: 150px;
     height: 50px;
-    border: 2px solid #FFFFFF;
+    border: 2px solid #FFF;
     border-radius: 2px;
     background-color: transparent;
     background-image: url(../../../images/plus.svg);
@@ -19,6 +17,5 @@
     .profile__add-button {
         width: 282px;
         background-size: 16px;
-
     }
 }
