--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,42 +1,36 @@
-.profile {
-    display: flex;
-    align-items: center;
-    margin: 40px auto 0;
+.elements {
     width: calc(100% - 200px * 2);
-
-    max-height: 120px;
+    margin: 50px auto 0;
 }
 
+
 @media screen and (max-width: 1050px) {
-    .profile {
+    .elements {
         width: calc(100% - 150px * 2);
     }
 }
 
 @media screen and (max-width: 950px) {
-    .profile {
+    .elements {
         width: calc(100% - 100px * 2);
     }
 }
 
 @media screen and (max-width: 850px) {
-    .profile {
+    .elements {
         width: calc(100% - 60px * 2);
-        min-height: 56px;
     }
 }
 
 @media screen and (max-width: 770px) {
-    .profile {
+    .elements {
         width: calc(100% - 20px * 2);
-        min-height: 56px;
     }
 }
 
-@media screen and (max-width: 595px) {
-    .profile {
-        flex-direction: column;
-        min-height: 286px;
+@media screen and (max-width: 635px) {
+    .elements {
+        margin-top: 36px;
         width: 100%;
     }
 }
