--- a/pages/index.css
+++ b/pages/index.css
@@ -12,3 +12,12 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__image/elements__image.css);
+@import url(../blocks/elements/__info/elements__info.css);
+@import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/__like-button/elements__like-button.css);
+@import url(../blocks/elements/__list/elements__list.css);
+@import url(../blocks/elements/__title/elements__title.css);
+@import url(../blocks/elements/__item/elements__item.css);
+@import url(../blocks/elements/__like/elements__like.css);
