--- a/pages/index.css
+++ b/pages/index.css
@@ -21,3 +21,5 @@
 @import url(../blocks/elements/__title/elements__title.css);
 @import url(../blocks/elements/__item/elements__item.css);
 @import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__text/footer__text.css);
