--- a/pages/index.css
+++ b/pages/index.css
@@ -23,3 +23,4 @@
 @import url(../blocks/elements/__like/elements__like.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
+@import url(../blocks/links-opacity-60/links-opacity-60.css);
