--- a/blocks/elements/__like-button/elements__like-button.css
+++ b/blocks/elements/__like-button/elements__like-button.css
@@ -1,11 +1,17 @@
 .elements__like-button {
     width: 22px;
     height: 19px;
-    background-color: #fff;
-    background-image: url(../../../images/heart.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 22px 19px;
+    background: url(../../../images/heart.svg);
+    background-color: transparent;
     cursor: pointer;
     border: none;
+    margin: 0;
+    padding: 0;
+    opacity: 100%;
+    transition: opacity 0.3s ease;
+}
+
+
+.elements__like-button:hover {
+    opacity: 50%;
 }
