--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -6,14 +6,29 @@
     color: #FFF;
     margin: 7px 0 0 0;
     padding: 0;
+    max-width: 450px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
 
 }
 
+@media screen and (max-width: 1230px) {
+    .profile__about {
+        max-width: 350px;
+    }
+}
+
+@media screen and (max-width: 1130px) {
+    .profile__about {
+        max-width: 250px;
+    }
+}
+
+
 @media screen and (max-width: 700px) {
     .profile__about {
+        max-width: 180px;
         font-size: 14px;
         line-height: 17px;
     }
@@ -21,7 +36,9 @@
 
 @media screen and (max-width: 595px) {
     .profile__about {
+        max-width: 230px;
         margin-top: 8px;
-        align-self: center;
+        margin-left: 20px;
+        justify-self: center;
     }
 }
