--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,12 +1,13 @@
 .profile__edit-button {
     width: 24px;
     height: 24px;
+    align-self: center;
     background-image: url(../../../images/pencil.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-color: transparent;
     background-size: 10px;
-    margin: 0 0 0 10px;
+    margin: 5px 0 0 25px;
     padding: 0;
     border: 1px solid #FFFFFF;
     cursor: pointer;
@@ -18,6 +19,8 @@
         width: 18px;
         height: 18px;
         background-size: 7.5px;
-        margin-left: 3px;
+        margin-left: 20px;
+        margin-bottom: 5px;
+        align-self: flex-end;
     }
 }
