--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,9 +1,9 @@
 .profile {
     display: flex;
+    justify-content: flex-start;
     align-items: center;
     margin: 40px auto 0;
     width: calc(100% - 200px * 2);
-
     max-height: 120px;
 }
 
