--- a/blocks/elements/__like-button/elements__like-button.css
+++ b/blocks/elements/__like-button/elements__like-button.css
@@ -3,9 +3,10 @@
     height: 19px;
     background: url(../../../images/heart.svg);
     background-color: transparent;
+    background-repeat: no-repeat;
     cursor: pointer;
     border: none;
-    margin: 0;
+    margin: 0 20px 0 0;
     padding: 0;
     opacity: 100%;
     transition: opacity 0.3s ease;
