--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -1,19 +1,13 @@
 .elements__list {
     display: grid;
-    grid-template-columns: repeat(3, minmax(282px, 1fr));
-    grid-row-gap: 21px;
-    grid-column-gap: 17px;
+    grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+    row-gap: 21px;
+    column-gap: 17px;
     grid-auto-rows: auto;
     justify-items: center;
     margin: 0 auto;
     padding: 0;
     list-style: none;
-}
-
-@media screen and (max-width: 1100px) {
-    .elements__list {
-        grid-template-columns: repeat(2, minmax(282px, 1fr));
-    }
 }
 
 @media screen and (max-width: 595px) {
