--- a/blocks/elements/__title/elements__title.css
+++ b/blocks/elements/__title/elements__title.css
@@ -4,7 +4,7 @@
     font-size: 24px;
     line-height: 29px;
     color: #000;
-    margin: 0 0 0 21px;
+    margin: 20px 0 26px 21px;
     padding: 0;
     text-overflow: ellipsis;
     white-space: nowrap;
