--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,9 +2,8 @@
     display: flex;
     width: calc(100% - 200px * 2);
     margin: 45px auto 0;
-    min-height: 74px;
     box-sizing: border-box;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 @media screen and (max-width: 1050px) {
@@ -35,6 +34,5 @@
     .header {
         width: 100%;
         margin-top: 28px;
-        min-height: 56px;
     }
 }
