--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,12 +1,11 @@
 .popup__container {
     background: #fff;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    flex-wrap: wrap;
+    align-self: start;
+    margin: 175px 0 0 0;
     width: 100%;
     max-width: 430px;
-    min-height: 330px;
     z-index: 2;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
@@ -16,7 +15,6 @@
 @media screen and (max-width: 595px) {
     .popup__container {
         max-width: 282px;
-        min-height: 322px;
-        transform: translate(-50%, -83%);
+        margin-top: 100px;
     }
 }
