--- a/blocks/profile/__avatar-image/profile__avatar-image.css
+++ b/blocks/profile/__avatar-image/profile__avatar-image.css
@@ -3,5 +3,13 @@
     height: 120px;
     border-radius: 50%;
     object-fit: cover;
+    margin-right: 30px;
 
+}
+
+
+@media screen and (max-width: 595px) {
+    .profile__avatar-image {
+        margin-right: 0;
+    }
 }
