--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,7 +7,7 @@
     background-position: center;
     background-color: transparent;
     background-size: 10px;
-    margin: 5px 0 0 25px;
+    margin: 6px 0 0 0;
     padding: 0;
     border: 1px solid #FFFFFF;
     cursor: pointer;
@@ -19,8 +19,7 @@
         width: 18px;
         height: 18px;
         background-size: 7.5px;
-        margin-left: 20px;
-        margin-bottom: 5px;
+        margin-bottom: 6px;
         align-self: flex-end;
     }
 }
