--- a/blocks/elements/__like-button/elements__like-button.css
+++ b/blocks/elements/__like-button/elements__like-button.css
@@ -4,14 +4,14 @@
     background: url(../../../images/heart.svg);
     background-color: transparent;
     background-repeat: no-repeat;
+    box-sizing: border-box;
     cursor: pointer;
     border: none;
-    margin: 0 20px 0 0;
-    padding: 0;
+    margin: 0;
+    padding: 22px 42px 0 0;
     opacity: 100%;
     transition: opacity 0.3s ease;
 }
-
 
 .elements__like-button:hover {
     opacity: 50%;
