--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,9 +1,10 @@
 .popup__container {
     background: #fff;
+    position: relative;
     display: flex;
     flex-wrap: wrap;
-    align-self: start;
-    margin: 175px 0 0 0;
+    align-self: center;
+    margin: 0;
     width: 100%;
     max-width: 430px;
     z-index: 2;
@@ -15,6 +16,5 @@
 @media screen and (max-width: 595px) {
     .popup__container {
         max-width: 282px;
-        margin-top: 100px;
     }
 }
