--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,7 @@
 @import url(../blocks/popup/__container/_type_image/popup__container_type_image.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__image-title/popup__image-title.css);
+@import url(../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css);
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__input-error/popup__input_type_error.css);
+@import url(../blocks/popup/__error/_visible/popup__error_visible.css);
