--- a/src/blocks/elements/__like-button/elements__like-button.css
+++ b/src/blocks/elements/__like-button/elements__like-button.css
@@ -8,7 +8,7 @@
     cursor: pointer;
     border: none;
     margin: 0;
-    padding: 22px 42px 0 0;
+    padding: 0;
     opacity: 100%;
     transition: opacity 0.3s ease;
 }
