--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -15,8 +15,10 @@
 @import url(../blocks/elements/__delete-button/elements__delete-button.css);
 @import url(../blocks/elements/__image/elements__image.css);
 @import url(../blocks/elements/__info/elements__info.css);
+@import url(../blocks/elements/__like-container/elements__like-container.css);
 @import url(../blocks/elements/__like-button/elements__like-button.css);
 @import url(../blocks/elements/__like-button/_active/elements__like-button_active.css);
+@import url(../blocks/elements/__like-counter/elements__like-counter.css);
 @import url(../blocks/elements/__list/elements__list.css);
 @import url(../blocks/elements/__title/elements__title.css);
 @import url(../blocks/elements/__item/elements__item.css);
