--- a/src/blocks/profile/__avatar-container/profile__avatar-container.css
+++ b/src/blocks/profile/__avatar-container/profile__avatar-container.css
@@ -1,6 +1,7 @@
 .profile__avatar-container {
     position: relative;
     display: inline-block;
+    margin-right: 30px;
 }
 
 .profile__avatar-container:hover {
